--- a/통계/21.06.10(PCA까지).md
+++ b/통계/21.06.10(PCA까지).md
@@ -39,3 +39,48 @@
 ### `scikit-learn` 에서 `StandardScaler` 
 
 ## re - scaling을 하는 이유 : scale범위가 너무 크면 노이즈 데이터가 생성되거나 overfitting이 될 가능성이 높아진다.
+
+
+
+---
+
+
+
+---
+
+
+
+# 캐글 x Tacademy 데이터 분석캠프
+
+> 후.. smoking
+
+
+
+## 결측치 (==Missing Value)
+
+### 삭제(Deletion) 
+
+#### Feature의 80% 이상이 사용하지 못 할 데이터 or 데이터 수가 충분히 많을 때
+
+### 대치(Imputation)
+
+####  다른 sample의 분포(통계)로 어느정도 예측이 가능, 의미적 추론 가능
+
+
+
+## 이상치(==outliers)
+
+### 같은 Feature의 다른 샘플들과 비교했을 때 비정상적으로 떨어진 관측치
+
+#### 삭제(Deletion) 
+
+#### 대치(Imputation)
+
+#### 로그변환(Log transformation)
+
+#### * 극단적인 outlier는 제거하지만 무조건 삭제하면 엄청난 오해가 생김.
+
+
+
+사진의 모든 저작권은 캐글코리아 운영자 분들께 있습니다
+
