--- a/통계/21.06.10(PCA까지).md
+++ b/통계/21.06.10(PCA까지).md
@@ -66,7 +66,12 @@
 
 ####  다른 sample의 분포(통계)로 어느정도 예측이 가능, 의미적 추론 가능
 
+```pyth
+?표인 데이터 보기 : 
+ex)data[data.apply(lambda x: "?" in list(x),axis=1)]
+```
 
+### 
 
 ## 이상치(==outliers)
 
@@ -81,6 +86,4 @@
 #### * 극단적인 outlier는 제거하지만 무조건 삭제하면 엄청난 오해가 생김.
 
 
-
-사진의 모든 저작권은 캐글코리아 운영자 분들께 있습니다
 
