--- a/통계/통계정리1.md
+++ b/통계/통계정리1.md
@@ -6,7 +6,7 @@
 
 
 
-## 1. 분산=표준편차(Variance)
+## 1. 분산(Variance)
 
 ![image-20210611222454302](C:\Users\pc\AppData\Roaming\Typora\typora-user-images\image-20210611222454302.png)
 
