--- a/study/2021.06.16(데이터시각화1).md
+++ b/study/2021.06.16(데이터시각화1).md
@@ -114,7 +114,7 @@ tips.describe()
 #### Categorical도 확인하기 위해 데이터 encoding을 하고 profile_report를 해보았다
 
 ```python
-# 변수.컬럼 = 변수.컬럼.replace({})
+# 변수.컬럼 = 변수.컬럼.replace()
 
 tips.sex = tips.sex.replace({'Fmale':0, 'Male':1})
 tips.smoker = tips.smoker.replace({'No':0,'Yes':1 })
