--- a/Jupyter Notbook/21.06.16plt1.ipynb
+++ b/Jupyter Notbook/21.06.16plt1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "id": "8a84d129-4e0d-448d-9a65-816510874542",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\pc\\2021-K-Digital-Training-main\\SQL\n"
+      "C:\\Users\\pc\\python_e\\Jupyter Notbook\n"
      ]
     }
    ],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "id": "51ea75cb-4ee1-4767-925c-4d75cf13d23b",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "id": "a26cb03d-af71-4d74-858c-3ef362f206b6",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "id": "b71dd63d-eef3-498e-908c-fe3c8163f4d0",
    "metadata": {},
    "outputs": [
@@ -52,7 +52,7 @@
        "Text(0.5, 0.98, 'stock')"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -81,17 +81,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "id": "e869329e-ba7f-4115-a90e-744212ff49bb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1f968a56910>]"
+       "[<matplotlib.lines.Line2D at 0x2390a5abdf0>]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "id": "a5605d78-5add-401e-b76e-67d6803fdcb4",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "id": "a0582bdb-f653-42fe-a3ec-25909ee8eac6",
    "metadata": {},
    "outputs": [],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "id": "664655d7-c3de-4972-aebb-363cd20b78d3",
    "metadata": {},
    "outputs": [
@@ -183,35 +183,35 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.496831</td>\n",
-       "      <td>0.417821</td>\n",
-       "      <td>0.013693</td>\n",
-       "      <td>0.154334</td>\n",
-       "      <td>0.464679</td>\n",
+       "      <td>0.826840</td>\n",
+       "      <td>0.436190</td>\n",
+       "      <td>0.850495</td>\n",
+       "      <td>0.258715</td>\n",
+       "      <td>0.426156</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.410256</td>\n",
-       "      <td>0.336066</td>\n",
-       "      <td>0.115020</td>\n",
-       "      <td>0.946447</td>\n",
-       "      <td>0.549753</td>\n",
+       "      <td>0.916171</td>\n",
+       "      <td>0.392719</td>\n",
+       "      <td>0.637595</td>\n",
+       "      <td>0.969316</td>\n",
+       "      <td>0.886966</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.658785</td>\n",
-       "      <td>0.318332</td>\n",
-       "      <td>0.908118</td>\n",
-       "      <td>0.323799</td>\n",
-       "      <td>0.227132</td>\n",
+       "      <td>0.603767</td>\n",
+       "      <td>0.573171</td>\n",
+       "      <td>0.652789</td>\n",
+       "      <td>0.606595</td>\n",
+       "      <td>0.909494</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.655375</td>\n",
-       "      <td>0.698151</td>\n",
-       "      <td>0.560132</td>\n",
-       "      <td>0.147495</td>\n",
-       "      <td>0.871723</td>\n",
+       "      <td>0.398144</td>\n",
+       "      <td>0.263328</td>\n",
+       "      <td>0.634549</td>\n",
+       "      <td>0.998340</td>\n",
+       "      <td>0.798066</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -219,13 +219,13 @@
       ],
       "text/plain": [
        "          a         b         c         d         e\n",
-       "0  0.496831  0.417821  0.013693  0.154334  0.464679\n",
-       "1  0.410256  0.336066  0.115020  0.946447  0.549753\n",
-       "2  0.658785  0.318332  0.908118  0.323799  0.227132\n",
-       "3  0.655375  0.698151  0.560132  0.147495  0.871723"
+       "0  0.826840  0.436190  0.850495  0.258715  0.426156\n",
+       "1  0.916171  0.392719  0.637595  0.969316  0.886966\n",
+       "2  0.603767  0.573171  0.652789  0.606595  0.909494\n",
+       "3  0.398144  0.263328  0.634549  0.998340  0.798066"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,20 +236,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "id": "f3cfd585-ce39-4c00-934d-0261daf071f3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.49683102, 0.41782067, 0.01369284, 0.15433376, 0.46467898],\n",
-       "       [0.41025552, 0.33606585, 0.11501969, 0.94644681, 0.54975262],\n",
-       "       [0.65878479, 0.31833222, 0.9081178 , 0.32379895, 0.22713225],\n",
-       "       [0.65537522, 0.69815126, 0.56013208, 0.14749496, 0.8717234 ]])"
+       "array([[0.82683974, 0.43619018, 0.85049471, 0.25871522, 0.42615617],\n",
+       "       [0.91617125, 0.39271928, 0.63759509, 0.96931625, 0.88696581],\n",
+       "       [0.60376731, 0.57317137, 0.65278861, 0.60659508, 0.90949402],\n",
+       "       [0.39814419, 0.26332754, 0.63454892, 0.99833957, 0.79806595]])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,17 +262,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "id": "6b8e9198-de91-45fb-b115-f206b3d4dd64",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0691150025437231"
+       "0.052467298458958686"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "8947bcc4-777a-47e3-88a2-ad90d045eaac",
    "metadata": {},
    "outputs": [],
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "id": "05404e09-c81b-49ec-ae0d-de78dc98d929",
    "metadata": {},
    "outputs": [
@@ -305,7 +305,7 @@
        "       [3, 4]])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,17 +316,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
    "id": "50a9be4f-8d65-422c-ae87-8005c07d9f2a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1f9689e5bb0>"
+       "<matplotlib.legend.Legend at 0x2390a5e3ca0>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -348,7 +348,8 @@
     "\n",
     "# Note that even in the OO-style, we use `.pyplot.figure` to create the figure.\n",
     "fig, ax = plt.subplots()  # Create a figure and an axes.\n",
-    "#여기서부터 3줄은 선이 어떤값인지 표에 알려준다\n",
+    "\n",
+    "# 여기서부터 3줄은 선이 어떤값인지 표에 알려준다\n",
     "ax.plot(x, x, label='smoker')  # Plot some data on the axes.\n",
     "ax.plot(x, x**2, label='tip')  # Plot more data on the axes...\n",
     "ax.plot(x, x**3, label='total_bill')  # ... and some more.\n",
