--- a/PCA/2021.06.16(데이터시각화1).md
+++ b/PCA/2021.06.16(데이터시각화1).md
@@ -73,7 +73,7 @@ ax.legend(loc = 4)  # 범례기능사각형 위치, 폰트 조절가능
 import seaborn as sns
 import pandas as pd
 
-# sns.regplot():회기분석 시각화
+# sns.regplot():회기분석 시각화 / color도 한번 바꿔보았다
 sns.regplot(x="total_bill", y="tip", color="black",data=tips)
 ```
 
