--- a/K-Digital특강/20210604.md
+++ b/K-Digital특강/20210604.md
@@ -10,7 +10,7 @@
 
 ### ``git chechout(switch로 해도무관) <branchname>`` :  사용할 브랜치로 이동
 
-### ``git chechout -b  <branchname>`` 브랜치 작성 후 바로 이동
+### ``git checkout -b  <branchname>`` 브랜치 작성 후 바로 이동
 
 ### ``git merge <branchnaem>``  :  브랜치 병합
 
