--- a/애자일프로젝트/5강_프로젝트 라이프사이클의 이해.md
+++ b/애자일프로젝트/5강_프로젝트 라이프사이클의 이해.md
@@ -6,8 +6,6 @@
 
 - 착수- 계획-실행- 감시 및 통제- 종료(계획, 감시및 통제, 실행은 동시진행)
 
-
-
 - 프로젝트 라이프 사이클에서의 단계는 순차적일수도 있고, 반복적일 수도 있고, 중첩될 수도 있다
 - 논리적으로 연관된 프로젝트 활동들로 구성, 한개이상 인도물이 완성되면 끝
 
@@ -28,7 +26,7 @@
 
 ### 일반 라이프 사이클
 
-- 진도율, 작업량, 비용은 누적으로 검토및 관리해야하며 이를 S Curve 라고 부름
+- 진도율, 작업량, 비용은 누적으로 검토및 관리해야하며 이를 S Curve 라고 부름.
 
 ## 2. 예측형 프로젝트 관리 vs 적응형 프로젝트 관리
 
