--- a/애자일프로젝트/6강_ 적응형 라이프사이클_(1).md
+++ b/애자일프로젝트/6강_ 적응형 라이프사이클_(1).md
@@ -2,10 +2,59 @@
 
 ## 적응형 라이프 사이클개요
 
+### 예측형 vs 적응형
+
+- 예측형이든 적응형이든 모든 프로젝트는 프로세스가 필요
+
+- 적응형(애자일) : 증분 내에서 반복 , 개인의 역량에 의존, 간단한 프로세스 제시
+
+  - 불확실성이 높을 때
+  - Human Driven
+  - 변경을 실시간으로 반영 : 가치중심
+  - 팀 중심 업무 수행(Self Organization)
+  - 확정요소 : 자원, 시간 가변요소 : 기능
+
+  
+
+- 예측형 : 체계적인 계획에 기반하여 예측가능한 프로세스
+
+  - 기존사례에 대한 Process Driven
+  - 불확실성 낮을때, 변경을 최대한 제한 : 계획중심
+  - 확정요소 : 요구사항, 가변요소 : 자원, 시간
 
 
-## 반복형(Iterative)
+
+- 프로젝트 라이프 사이클 접근방식의 선택
+  - 애자일 : 반복형 + 증분형
+
+![image-20210709180251822](6강_ 적응형 라이프사이클_(1).assets/image-20210709180251822.png)
+
+## 반복형(Iterative) 
+
+- 반복형의 초점 :불확실성 관리를 위한  ``리스크완화``를 목표로 함
+
+- 프로젝트 초기에 요구사항을 수집하고 범위를 결정
+- 프로토타입을 통해 분석, 설계
+- 개발과 테스트를 여러번 반복수행하여 제품이나 서비스를 구체화하고 개선
+- 반복을 통해 요구사항이 충족되면 마지막에 `한 번 인도`
 
 
 
-## 증분형(Incremental)
+### 반복형이 필요한 경우 : 프로젝트가 상대적으로 복잡한 경우
+
+- 스토리보드 : 연속적인 이미지나 도해를 통해 이동, 전환 순서를 보여주는 프로토타입 기법
+
+- 프로토타입 : 고객의 요구사항을 가장 정확하게 확인
+
+  - 요구사항에 대한 조기 피드백
+
+  
+
+## 증분형(Incremental) : 점증적 
+
+- 사전에 정해진 기간 내에 기능을 계속 추가해 나가는 일련의 반복과정을 통해 인도물 산출
+  - 여러 번 고객에게 인도
+  - 제품의 빠른 인도 즉 ``속도``가 가장 중요한 개발 모델
+
+- 프로젝트 일정관리에 초점
+- 우선순위가 높은 범위를 더 빨리 인도
