--- a/애자일프로젝트/6강_ 적응형 라이프사이클_(1).md
+++ b/애자일프로젝트/6강_ 적응형 라이프사이클_(1).md
@@ -50,7 +50,7 @@
 
   
 
-## 증분형(Incremental) : 점증적 
+## 증분형(Incremental) : 속도에 초점
 
 - 사전에 정해진 기간 내에 기능을 계속 추가해 나가는 일련의 반복과정을 통해 인도물 산출
   - 여러 번 고객에게 인도
